--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@ nav{
     width: 15%;
     height: 100%;
     float: left;
+    background-color: black;
+}
+nav a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    padding: 5% 0;
+}
+nav a: :hover{
+
 }
 .contain{
     float: left;
@@ -25,6 +37,7 @@ footer{
     margin: 0 15%;
     padding: 10px 0;
     border-top: 2px solid black;
+    background-color: white;
 }
 .cols{
     float: left;
