--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 html, body{
     margin: 0;
     height: 100%;
@@ -45,6 +48,24 @@ main{
     padding-bottom: 48px;
     overflow: hidden;
     text-align: center;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+h1{
+    grid-column: span 3;
+}
+section{
+    grid-column: span 1;
+    text-align: left;
+}
+section:not(:first-child){
+    padding-left: 10px;
+}
+section:not(:last-child){
+    padding-right: 10px;
+    border-right: 2px solid black;
 }
 footer{
     position: absolute;
