--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,8 @@ footer {
     display: block;
     border: 1px solid black;
     width: 100%;
-    height: auto;
+    padding: 2px 0;
+    font-size: 8px;
 }
 
 .truetime,
